# leetcode

./: .gitignore  0002.add.two.numbers.py  0004.median.of.two.sorted.arrays.py  0006.zigzag.conversion.py  0007.reverse.integer.py  0008.string.to.integer.atoi.py  0009.is.palindrome.py  0011.container.with.most.water.py  0012.integer.to.roman.py  0014.longest.common.prefix.py  0015.three.sum.py  0016.three.sum.closest.py  0017.letter.combinations.of.a.phone.number.py  0019.remove.nth.node.from.end.of.list.py  0020.valid.arentheses.py  0021.merge.two.sorted.lists.py  0026.remove.duplicates.from.sorted.array.py  0027.remove.element.py  0028.find.the.index.of.the.first.occurrence.in.a.string.py  0036.vaild.sudoku.py  0045.jump.game.ii.py  0049.group.anagrams.py  0053.maxunum.subarry.py  0055.jump.game.py  0056.merge.intervals.py  0061.rotate.list.py  0062.unique.paths.py  0066.plus_one.py  0067.add.binary.py  0069.sqrt.x.py  0070.climbing.stairs.py  0071.simplify.path.py  0072.edit.distance.py  0080.remove.duplicates.from.sorted.array.ii.py  0082.remove.duplicates.from.sorted.list.ii.py  0083.remove.duplicates.from.sorted.list.py  0086.partition.list.py  0088.merge.sorted.array.py  0092.reverse.linked.list.ii.py  0094.binary.tree.inorder.traversal.py  (+193 more)
algorithm/: binary.search.md  gcd.py  kmp.md  slow.and.fast.pointers.md  tree.md
data_structure/: binary_tree.py  linked_list.py  max_heap.py  tree.py  trie_with_819.py
test/: test_binary_tree.py
